# AsioLearn

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/asio/PaxHeader/: any_completion_executor.hpp  any_completion_handler.hpp  any_io_executor.hpp  append.hpp  as_tuple.hpp  associated_allocator.hpp  associated_cancellation_slot.hpp  associated_executor.hpp  associated_immediate_executor.hpp  associator.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_file.hpp  basic_io_object.hpp  basic_random_access_file.hpp  basic_raw_socket.hpp  basic_readable_pipe.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_file.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  basic_writable_pipe.hpp  bind_allocator.hpp  bind_cancellation_slot.hpp  bind_executor.hpp  bind_immediate_executor.hpp  buffer.hpp  buffer_registration.hpp  buffered_read_stream.hpp  buffered_read_stream_fwd.hpp  (+97 more)
include/asio/detail/PaxHeader/: array.hpp  array_fwd.hpp  assert.hpp  atomic_count.hpp  base_from_cancellation_state.hpp  base_from_completion_cond.hpp  bind_handler.hpp  blocking_executor_op.hpp  buffer_resize_guard.hpp  buffer_sequence_adapter.hpp  buffered_stream_storage.hpp  call_stack.hpp  chrono.hpp  chrono_time_traits.hpp  completion_handler.hpp  composed_work.hpp  concurrency_hint.hpp  conditionally_enabled_event.hpp  conditionally_enabled_mutex.hpp  config.hpp  consuming_buffers.hpp  cstddef.hpp  cstdint.hpp  date_time_fwd.hpp  deadline_timer_service.hpp  dependent_type.hpp  descriptor_ops.hpp  descriptor_read_op.hpp  descriptor_write_op.hpp  dev_poll_reactor.hpp  epoll_reactor.hpp  event.hpp  eventfd_select_interrupter.hpp  exception.hpp  executor_function.hpp  executor_op.hpp  fd_set_adapter.hpp  fenced_block.hpp  functional.hpp  future.hpp  (+181 more)
include/asio/execution/PaxHeader/: allocator.hpp  any_executor.hpp  bad_executor.hpp  blocking.hpp  blocking_adaptation.hpp  context.hpp  context_as.hpp  executor.hpp  (+7 more)
network/: CMakeLists.txt
network/include/network/: tcp_client.h
network/src/: tcp_client.cpp
serial_port/: CMakeLists.txt  list_serial_port.cpp  serial_port.cpp  serial_port_async.cpp  serial_port_sync.cpp  serial_test.cpp
serial_port/include/: serial_port_session.h
serial_port/src/: serial_port_session.cpp
tcp/: CMakeLists.txt  tcp_client.cpp  tcp_client2.cpp  tcp_server.cpp  tcp_server_async.cpp  tcp_server_async2.cpp
timer/: CMakeLists.txt  timer3.cpp  timer4.cpp  timer5.cpp  timer_async.cpp  timer_sync.cpp
udp/: CMakeLists.txt  tcp_udp.cpp  udp_client.cpp  udp_server.cpp  udp_server_async.cpp
(+274 files in other folders)
